Added gravity attribute

--- a/app/src/main/res/layout/activity_example.xml
+++ b/app/src/main/res/layout/activity_example.xml
@@ -1,23 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-    android:gravity="start">
+    >
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="This"
+        android:background="#00ff00"/>
+
     <org.fabiomsr.currencytextview.CurrencyTextView
+        android:id="@+id/top"
+        style="@style/CurrencyTextViewStyleK"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:amount="125.3558"
-        android:layout_centerInParent="true"
         android:background="#ff4455"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
 
-        app:decimalDigitsTextSize="8sp"
-        app:symbolGravity="end|top"
-
         />
-</RelativeLayout>
+
+    <org.fabiomsr.currencytextview.CurrencyTextView
+        style="@style/CurrencyTextViewStyleC"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:amount="125.3558"
+        android:background="#44ff55"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        />
+
+</LinearLayout>
