--- a/app/src/main/res/layout/activity_example.xml
+++ b/app/src/main/res/layout/activity_example.xml
@@ -1,41 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-    >
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#E21B5A">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="This"
-        android:background="#00ff00"/>
-
-    <org.fabiomsr.currencytextview.CurrencyTextView
-        android:id="@+id/top"
-        style="@style/CurrencyTextViewStyleK"
+    <org.fabiomsr.moneytextview.MoneyTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:amount="125.3558"
-        android:background="#ff4455"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="32dp"
+        app:symbol="$"
+        app:symbolGravity="start|top"
+        app:symbolTextSize="30sp"
+        app:symbolMargin="6dp"
+        app:amount="1256.56"
+        app:baseTextSize="54sp"
+        app:decimalDigitsTextSize="30sp"
+        app:decimalMargin="6dp"
+        app:includeDecimalSeparator="false"
+        app:baseTextColor="#FBFFE3"/>
 
-        />
+    <org.fabiomsr.moneytextview.MoneyTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        app:symbol="¥"
+        app:symbolGravity="start|bottom"
+        app:decimalGravity="bottom"
+        app:amount="1256.56"
+        app:decimalSeparator="."
+        app:baseTextSize="54sp"
+        app:symbolTextSize="30sp"
+        app:decimalDigitsTextSize="30sp"
+        app:decimalMargin="6dp"
+        app:includeDecimalSeparator="false"
+        app:baseTextColor="#FBFFE3"/>
 
-    <org.fabiomsr.currencytextview.CurrencyTextView
-        style="@style/CurrencyTextViewStyleC"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:amount="125.3558"
-        android:background="#44ff55"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
-        />
+    <org.fabiomsr.moneytextview.MoneyTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="32dp"
+        app:symbol="€"
+        app:symbolGravity="end|top"
+        app:decimalGravity="top"
+        app:amount="1256.56"
+        app:decimalSeparator="'"
+        app:baseTextSize="54sp"
+        app:symbolTextSize="30sp"
+        app:decimalDigitsTextSize="30sp"
+        app:baseTextColor="#FBFFE3"/>
 
-</LinearLayout>
+</RelativeLayout>
