--- a/moneytextview/src/main/res/values/attrs.xml
+++ b/moneytextview/src/main/res/values/attrs.xml
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="MoneyTextView">
-        <attr name="format" format="string"/><!---->
-        <attr name="symbol" format="string"/><!---->
-        <attr name="amount" format="float"/><!---->
-        <attr name="symbolMargin" format="dimension"/><!---->
-        <attr name="decimalMargin" format="dimension"/><!---->
-        <attr name="decimalSeparator" format="string"/><!---->
+        <attr name="format" format="string"/>
+        <attr name="symbol" format="string"/>
+        <attr name="amount" format="float"/>
+        <attr name="symbolMargin" format="dimension"/>
+        <attr name="decimalMargin" format="dimension"/>
+        <attr name="decimalSeparator" format="string"/>
 
-        <attr name="baseTextSize" format="dimension"/><!---->
-        <attr name="symbolTextSize" format="dimension"/><!---->
-        <attr name="decimalDigitsTextSize" format="dimension"/><!---->
+        <attr name="baseTextSize" format="dimension"/>
+        <attr name="symbolTextSize" format="dimension"/>
+        <attr name="decimalDigitsTextSize" format="dimension"/>
 
-        <attr name="symbolGravity"><!---->
+        <attr name="symbolGravity">
             <flag name="start" value="0x01"/>
             <flag name="end" value="0x02"/>
             <flag name="top" value="0x04"/>
             <flag name="bottom" value="0x08"/>
         </attr>
 
-        <attr name="decimalGravity" format="enum"><!---->
+        <attr name="decimalGravity" format="enum">
             <enum name="top" value="4"/>
             <enum name="bottom" value="8"/>
         </attr>
 
-        <attr name="gravity"><!---->
+        <attr name="gravity">
             <enum name="left" value="0x01"/>
             <enum name="right" value="0x02"/>
             <enum name="top" value="0x04"/>
@@ -34,9 +34,9 @@
             <enum name="center" value="0x48"/>
         </attr>
 
-        <attr name="baseTextColor" format="color"/><!---->
-        <attr name="symbolTextColor" format="color"/><!---->
-        <attr name="decimalTextColor" format="color"/><!---->
+        <attr name="baseTextColor" format="color"/>
+        <attr name="symbolTextColor" format="color"/>
+        <attr name="decimalTextColor" format="color"/>
 
         <attr name="includeDecimalSeparator" format="boolean"/>
         <attr name="decimalUnderline" format="boolean"/>
