--- a/moneytextview/src/main/res/values/default_style.xml
+++ b/moneytextview/src/main/res/values/default_style.xml
@@ -2,14 +2,14 @@
 <resources>
 
     <style name="MoneyTextViewDefaultStyle">
-        <item name="format">@string/default_format</item> <!---->
-        <item name="symbol">$</item><!---->
+        <item name="format">@string/default_format</item>
+        <item name="symbol">$</item>
         <item name="decimalSeparator">\'</item>
         <item name="baseTextSize">18sp</item>
         <item name="baseTextColor">#000000</item>
         <item name="includeDecimalSeparator">true</item>
         <item name="decimalUnderline">false</item>
-        <item name="symbolMargin">2dp</item><!---->
+        <item name="symbolMargin">2dp</item>
         <item name="decimalMargin">2dp</item>
     </style>
 
